--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "",
+  "homepage": "https://DaniBas2004.github.io/CArteProductos",
   "scripts": {
+    "predeploy":"npm run build",
     "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
